# pet_proxy_gates_stratum

./: .gitignore  Cargo.toml
config/: config_example.json
crates/app/: Cargo.toml
crates/app/src/: supervisor.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: job.rs
crates/db/: Cargo.toml
crates/db/src/: lib.rs
crates/kafka/: Cargo.toml
crates/net/: Cargo.toml
crates/net/src/: connection.rs  lib.rs  message.rs  server.rs  utils.rs
crates/network/: Cargo.toml
crates/network/src/: connection.rs  lib.rs  message.rs  server.rs  upstream.rs  utils.rs
crates/network/src/api/: client.rs
crates/network/src/message/: parse_message.rs  validation.rs
crates/network/src/message/validation/: authorize_validation.rs  submit_validation.rs  subscribe_validation.rs
crates/network/src/upstream/: pool_client.rs
crates/scheduler/: Cargo.toml
crates/scheduler/src/: scheduler.rs
crates/score/: Cargo.toml
crates/score/src/: job.rs  lib.rs  miner.rs  traits.rs  utils.rs
crates/telemetry/: Cargo.toml
crates/telemetry/src/: jobs_telemetry.rs  lib.rs
crates/utils/: Cargo.toml
crates/utils/src/: logs.rs
scripts/loadtest/scheduler/: many_request-main.sh  nc_send.sh  request_ping.sh  request_submit.sh
src/: main.rs  network.rs  scheduler.rs  utils.rs
src/app/: supervisor.rs
src/domain/: job.rs
src/logs/: logs.rs
src/methods/: submit.rs
src/network/: connection.rs  message.rs  server.rs
src/utils/: metrics.rs  socket.rs
