[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }

telemetry = { path = "../telemetry" }
net = { path = "../net" }
scheduler = { path = "../scheduler" }
core = { path = "../core" }