[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }

telemetry = { path = "../telemetry" }
network = { path = "../network" }
scheduler = { path = "../scheduler" }
score = { path = "../score" }
config = { path = "../config" }