[package]
name = "network"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }

dashmap = "7.0.0-rc2"
futures = "0.3.31"

score = { path = "../score" }
config = { path = "../config" }
serde = { version = "1.0.228", features = ["derive"] }