[package]
name = "scheduler"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }

score = { path = "../score" }
config = { path = "../config" }
network = { path = "../network" }